--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -17,7 +17,8 @@
 .hero-video-section {
   position: relative;
   width: 100%;
-  height: 100vh;
+/*  height: 100vh;*/
+  min-height: 100vh;
   overflow: hidden;
 }
 .hero-video {
