ERB: psuhed new changes

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -58,7 +58,7 @@
   font-size: 5.5rem !important;
   font-weight: 900;
 /*  color: #e8c0a0;*/
-  color: #d4a24c !important;
+  color: #b88a32 !important;
   line-height: 1.05;
   margin: 0 0 1rem 0 !important;
   letter-spacing: -2px;
