ERB: psuhed new changes

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -60,9 +60,9 @@
 /*  color: #e8c0a0;*/
   background: linear-gradient(
     180deg,
-    #efd0b8 0%,
-    #e8c0a0 40%,
-    #b88762 100%
+    #ddb89d 0%,
+    #cfa57d 40%,
+    #8f5e3b 100%
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
